# llmtest

./: README.MD  pyproject.toml  requirements.txt  run.py
app/: __init__.py  api.py  config.py  llama3-hf-demo.py  tasks.py
app/resources/: first_model_conversation.json
models/: task.py
speech/: mic_test.py  mic_test2.py  speech_with_continuous_buffer_overlap.py  speech_with_initial_prompt.py  speech_with_merging_overlapping_transcriptions.py  speech_with_overlap.py  speech_with_rolling_buffer.py
task_queue/: executor.py  listener.py
test/: cuda_test.py
