[tool.poetry]
name = "llmtest"
version = "0.1.0"
description = "A Python application for managing GenAI tasks using LangChain, OpenAI, and vector DB RAG."
authors = ["Rahul Singh Khokhar <rahulsinghkhokhar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
openai = "^1.52.2"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
fastapi = "^0.115.3"


[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
